# Harmonium

./: README.md  harmonium.cabal  hie.yaml
app/: Main.hs
lib/: Harmony.hs  Main.hs  Midi.hs
