cabal-version:      2.4
name:               harmonium
version:            0.1.0.0

license:            MIT
author:             gcholette
maintainer:         solutions@gcholette.com

extra-source-files: CHANGELOG.md

executable harmonium
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:    base ^>=4.14.3.0
                    , HCodecs ^>=0.5.2
    hs-source-dirs:   app
    default-language: Haskell2010
