cabal-version:      2.4
name:               harmonium
version:            0.0.1

license:            MIT
author:             gcholette
maintainer:         solutions@gcholette.com

extra-source-files: CHANGELOG.md

executable harmonium
    main-is:          Main.hs

    build-depends:    base ^>=4.14.3.0
                    , HCodecs ^>=0.5.2
    hs-source-dirs:   app
    default-language: Haskell2010
